changes to be committed:   (use "git reset HEAD <file>..." to unstage)
    modified:   server.py
    modified:   templates/index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,12 +51,12 @@
         }
 
         .latest-items {
-            text-align: left; /* Align items list to the left */
+            text-align: center; /* Align items list to the left */
             margin-top: 20px;
         }
 
         .categories {
-            text-align: center; /* Align categories list to the center */
+            text-align: left; /* Align categories list to the center */
             margin-bottom: 20px;
         }
 
