--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
         }
 
         .categories {
-            text-align: left; /* Align categories list to the center */
+            float: left; /* Align categories list to the left */
             margin-bottom: 20px;
         }
 
