--- a/templates/index.html
+++ b/templates/index.html
@@ -56,8 +56,8 @@
         }
 
         .categories {
-            float: left; /* Align categories list to the left */
-            margin-bottom: 20px;
+            text-align: left; /* Align categories list to the left */
+            margin-right: 20px;
         }
 
         .pagination {
