--- a/templates/index.html
+++ b/templates/index.html
@@ -40,12 +40,12 @@
 
         .login-register {
             float: right;
-            margin-top: 10px;
+            margin-top: 2px;
         }
 
         .latest-items {
             text-align: center; /* Align items list to the left */
-            margin-top: 20px;
+            margin-top: 0;
         }
 
         .categories {
