--- a/templates/index.html
+++ b/templates/index.html
@@ -81,8 +81,8 @@
         <h1>Welcome to CENGden</h1>
         <div>
             <ul class="menu">
-                <li><a href="#">Register</a></li>
-                <li><a href="#">Login</a></li>
+                <a href="/register">Register</a>
+                <li><a href="/login">Login</a></li>
             </ul>
         </div>
         <div class="categories-label">CATEGORIES</div>
