--- a/templates/register.html
+++ b/templates/register.html
@@ -15,7 +15,7 @@
         <label for="pass">Password:</label><br>
         <input type="password" id="pass" name="pass" required><br>
         
-        <label for="name">Username:</label><br>
+        <label for="name">Name:</label><br>
         <input type="text" id="name" name="name" required><br>
 
         <label for="phone">Phone Number:</label><br>
