--- a/templates/register.html
+++ b/templates/register.html
@@ -4,24 +4,85 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register - CENGden</title>
+    <style>
+        * {box-sizing: border-box}
+
+        .container {
+            padding: 16px;
+        }
+
+        input[type=text], input[type=password], input[type=tel] {
+            width: 100%;
+            padding: 15px;
+            margin: 5px 0 22px 0;
+            display: inline-block;
+            border: none;
+            background: #f1f1f1;
+        }
+
+        input[type=text]:focus, input[type=password]:focus, input[type=tel]:focus {
+            background-color: #ddd;
+            outline: none;
+        }
+
+        hr {
+            border: 1px solid #f1f1f1;
+            margin-bottom: 25px;
+        }
+
+        .registerbtn {
+            background-color: #04AA6D;
+            color: white;
+            padding: 16px 20px;
+            margin: 8px 0;
+            border: none;
+            cursor: pointer;
+            width: 100%;
+            opacity: 0.9;
+        }
+
+        .registerbtn:hover {
+            opacity:1;
+        }
+
+        a {
+            color: dodgerblue;
+        }
+
+        .signin {
+            background-color: #f1f1f1;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <h2>Register to CENGden</h2>
-    <form action="/register" method="POST">
-        
-        <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email" pattern=".+@ceng.metu.edu.tr" title="Please use your CENG email" required><br>
-        
-        <label for="pass">Password:</label><br>
-        <input type="password" id="pass" name="pass" required><br>
-        
-        <label for="name">Name:</label><br>
-        <input type="text" id="name" name="name" required><br>
 
-        <label for="phone">Phone Number:</label><br>
-        <input type="tel" id="phone" name="phone"><br>
-        
-        <button type="submit">Register</button>
-    </form>
+<form action="/register" method="POST">
+    <div class="container">
+        <h1>Register</h1>
+        <p>Please fill in this form to create an account.</p>
+        <hr>
+
+        <label for="name"><b>Name</b></label>
+        <input type="text" placeholder="Enter Name" name="name" id="name" required>
+
+        <label for="email"><b>Email</b></label>
+        <input type="text" placeholder="Enter Email" name="email" id="email" required>
+
+        <label for="pass"><b>Password</b></label>
+        <input type="password" placeholder="Enter Password" name="pass" id="pass" required>
+
+        <label for="phone"><b>Phone Number</b></label>
+        <input type="tel" placeholder="Enter Phone Number" name="phone" id="phone">
+        <hr>
+        <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
+        <button type="submit" class="registerbtn">Register</button>
+    </div>
+
+    <div class="container signin">
+        <p>Already have an account? <a href="/login">Sign in</a>.</p>
+    </div>
+</form>
+
 </body>
 </html>
