--- a/templates/register.html
+++ b/templates/register.html
@@ -56,6 +56,7 @@
         .signin {
             background-color: #f1f1f1;
             text-align: center;
+            margin-top: 20px;
         }
     </style>
 </head>
