--- a/templates/login.html
+++ b/templates/login.html
@@ -59,6 +59,11 @@
             text-align: center;
             margin-top: 20px;
         }
+
+        .error {
+            color: red;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -68,7 +73,10 @@
         <h1>Login to CENGden</h1>
         <p>Please enter your credentials to login.</p>
         <hr>
-
+        {% if error %}
+            <p class="error">{{ error }}</p>
+        {% endif %}
+        
         <label for="email"><b>Email</b></label>
         <input type="text" placeholder="Enter Email" name="email" id="email" required>
 
