--- a/templates/index.html
+++ b/templates/index.html
@@ -5,32 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to CENGden</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-        }
-
         .header {
-            background-color: #007bff;
-            color: #fff;
-            padding: 10px;
-            display: flex;
-            justify-content: space-between;
-            position: relative;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                background-color: #007bff;
+                color: white;
+                padding: 10px 50px; /* Adjust the padding as needed */
+            }
+
+        .welcome-text {
+            text-align: center;
+            flex-grow: 1; /* This makes the welcome text centered */
         }
 
-        .menu {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-            display: flex;
+        .auth-buttons a {
+            color: white;
+            text-decoration: none;
+            margin-right: 20px; /* Adds space between Register and Login */
         }
 
-        .menu li {
-            margin-right: 20px;
+        .auth-buttons {
+            margin-left: 20px; /* Adds some space on the left */
         }
 
         .categories-list {
@@ -78,13 +74,12 @@
 </head>
 <body>
     <div class="header">
-        <h1>Welcome to CENGden</h1>
-        <div>
-            <ul class="menu">
-                <a href="/register">Register</a>
-                <li><a href="/login">Login</a></li>
-            </ul>
+        <div class="welcome-text">Welcome to CENGden</div>
+        <div class="auth-buttons">
+            <a href="/register" class="register">Register</a>
+            <a href="/login" class="login">Login</a>
         </div>
+    </div>
         <div class="categories-label">CATEGORIES</div>
         <ul class="categories-list">
             <li><a href="#">Vehicles</a></li>
