--- a/templates/index.html
+++ b/templates/index.html
@@ -5,28 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to CENGden</title>
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+        }
+
         .header {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                background-color: #007bff;
-                color: white;
-                padding: 10px 50px; /* Adjust the padding as needed */
-            }
-
-        .welcome-text {
-            text-align: center;
-            flex-grow: 1; /* This makes the welcome text centered */
+            background-color: #007bff;
+            color: #fff;
+            padding: 10px;
+            align-items: center;
+            display: flex;
+            justify-content: space-between;
+            position: relative;
         }
 
-        .auth-buttons a {
+        .menu {
+            list-style-type: none;
+            padding: 0;
             color: white;
-            text-decoration: none;
-            margin-right: 20px; /* Adds space between Register and Login */
+            margin-right: 20px;
+            display: flex;
         }
 
-        .auth-buttons {
-            margin-left: 20px; /* Adds some space on the left */
+        .menu li {
+            margin-left: 20px;
         }
 
         .categories-list {
@@ -74,12 +80,13 @@
 </head>
 <body>
     <div class="header">
-        <div class="welcome-text">Welcome to CENGden</div>
-        <div class="auth-buttons">
-            <a href="/register" class="register">Register</a>
-            <a href="/login" class="login">Login</a>
+        <h1>Welcome to CENGden</h1>
+        <div>
+            <ul class="menu">
+                <a href="/register">Register</a>
+                <li><a href="/login">Login</a></li>
+            </ul>
         </div>
-    </div>
         <div class="categories-label">CATEGORIES</div>
         <ul class="categories-list">
             <li><a href="#">Vehicles</a></li>
