--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
             background-color: #007bff;
             color: #fff;
             padding: 10px;
-            align-items: center;
+            text-align: center;
             display: flex;
             justify-content: space-between;
             position: relative;
@@ -50,7 +50,7 @@
 
         .categories-label {
             position: absolute;
-            top: 60px; /* Adjust based on your actual layout */
+            top: 70px; /* Adjust based on your actual layout */
             right: 10px;
             color: #fff;
             background-color: #007bff;
