--- a/templates/index.html
+++ b/templates/index.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to CENGden</title>
     <style>
-        body {
+        .body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             display: flex;
             flex-direction: column;
+        }
+
+        .spacer {
+            flex: 1;
         }
 
         .header {
@@ -80,6 +84,7 @@
 </head>
 <body>
     <div class="header">
+        <div class="spacer"></div>
         <h1>Welcome to CENGden</h1>
         <div>
             <ul class="menu">
