--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,7 @@
         .header-content {
             flex-grow: 1;
             text-align: center;
+            margin-left: 20px;
         }
 
         .menu {
@@ -43,7 +44,7 @@
 
         .categories-label {
             position: absolute;
-            top: 0px; /* Adjust based on your actual layout */
+            top: 30px; /* Adjust based on your actual layout */
             left: 10px;
             color: #fff;
             background-color: #007bff;
