--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
         .header-content {
             flex-grow: 1;
             text-align: center;
-            margin-left: 20px;
+            margin-left: 40px;
         }
 
         .menu {
@@ -44,7 +44,7 @@
 
         .categories-label {
             position: absolute;
-            top: 30px; /* Adjust based on your actual layout */
+            top: 60px; /* Adjust based on your actual layout */
             left: 10px;
             color: #fff;
             background-color: #007bff;
@@ -64,6 +64,7 @@
             margin-top: 5px;
             border-radius: 5px;
             width: max-content; /* Adjust width based on content */
+            color: #fff;
         }
 
         .latest-items {
