--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to CENGden</title>
+    <title>CENGden</title>
     <style>
         .body {
             font-family: Arial, sans-serif;
