--- a/templates/index.html
+++ b/templates/index.html
@@ -90,7 +90,7 @@
 <body>
     <div class="header">
         <div class="header-content">
-            <h1>Welcome to CENGden</h1>
+            <h1>CENGden</h1>
         </div>
         <div>
             <ul class="menu">
