--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
         .header-content {
             flex-grow: 1;
             text-align: center;
-            margin-left: 40px;
+            margin-top: 20px;
         }
 
         .menu {
@@ -92,13 +92,14 @@
         <div class="header-content">
             <h1>CENGden</h1>
         </div>
-        <div>
-            <ul class="menu">
+    <div>
+        <ul class="menu">
                 <a href="/register">Register</a>
                 <li><a href="/login">Login</a></li>
-            </ul>
-        </div>
-        <div class="categories-label">CATEGORIES</div>
+        </ul>
+    </div>
+
+    <div class="categories-label">CATEGORIES</div>
         <ul class="categories-list">
             <li><a href="#">Vehicles</a></li>
             <li><a href="#">Computers</a></li>
