--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
         .header-content {
             flex-grow: 1;
             text-align: center;
-            margin-top: 20px;
+            margin-left: 40px;
         }
 
         .menu {
@@ -98,7 +98,7 @@
                 <li><a href="/login">Login</a></li>
         </ul>
     </div>
-
+    
     <div class="categories-label">CATEGORIES</div>
         <ul class="categories-list">
             <li><a href="#">Vehicles</a></li>
