--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
         }
 
         .menu li {
-            margin-left: 20px;
+            margin-right: 20px;
         }
 
         .categories-label {
