--- a/templates/index.html
+++ b/templates/index.html
@@ -36,6 +36,9 @@
             margin-right: 20px;
             display: flex;
         }
+        .menu li {
+            margin-left: 20px; /* Adds space to the left of each list item except the first one */
+        }
 
         .menu a {
             margin-right: 20px;
