--- a/templates/index.html
+++ b/templates/index.html
@@ -101,6 +101,7 @@
     <div>
         <ul class="menu">
             {% if 'email' in session %}
+            <a href="/additem">Add item</a>
             <a href="/account">My Account</a>
             <a href="/items">My Items</a>
             <a href="/favorites">My Favorites</a>
